footer now reappears on hover

--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
     <section>
         <p>Hover on any thumbnail to see it bigger</p>
         <div id="thumb-bar">
-            <img id="img1" class="thumb-image" src="">
-            <img id="img2" class="thumb-image" src="">
-            <img id="img3" class="thumb-image" src="">
-            <img id="img4" class="thumb-image" src="">
-            <img id="img5" class="thumb-image" src="">
+            <img id="img1" class="thumb-img" src="">
+            <img id="img2" class="thumb-img" src="">
+            <img id="img3" class="thumb-img" src="">
+            <img id="img4" class="thumb-img" src="">
+            <img id="img5" class="thumb-img" src="">
         </div>
         <img class="displayed-img" src="images/pic1.jpg">
         <footer id="form-elements">
